UV: select_edge_ring works differently than the equivalent operation on a Mesh #79148

Closed
opened 2020-07-21 22:11:21 +02:00 by Jesse Yurkovich · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Quadro 600/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 369.09

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-21 17:02, hash: b453e9e3a4
Worked: (newest version of Blender that worked as expected)

Short description of error
The new UV select_edge_ring functionality (CTRL+ALT+Left Mouse) selects different parts of the mesh than the equivalent Mesh operation.

Mesh select_edge_ring on one of the vertical edges:
mesh_edgering.png

UV select_edge_ring on one of the vertical edges:
uv_edgering.png

Note: A basic "select loop" also works differently between the UV and Mesh operations (try loop selecting edges of the circle in the below provided file for instance). At this point I'm unsure how UV is supposed to work but it seems pretty surprising.

Exact steps for others to reproduce the error
uv_edge_ring_select.blend

  • Open attached .blend
  • Perform edge ring select on Mesh
  • Perform edge ring select on UV
  • Notice differences
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Quadro 600/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 369.09 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-07-21 17:02, hash: `b453e9e3a4` Worked: (newest version of Blender that worked as expected) **Short description of error** The new UV select_edge_ring functionality (CTRL+ALT+Left Mouse) selects different parts of the mesh than the equivalent Mesh operation. Mesh select_edge_ring on one of the vertical edges: ![mesh_edgering.png](https://archive.blender.org/developer/F8712109/mesh_edgering.png) UV select_edge_ring on one of the vertical edges: ![uv_edgering.png](https://archive.blender.org/developer/F8712111/uv_edgering.png) Note: A basic "select loop" also works differently between the UV and Mesh operations (try loop selecting edges of the circle in the below provided file for instance). At this point I'm unsure how UV is supposed to work but it seems pretty surprising. **Exact steps for others to reproduce the error** [uv_edge_ring_select.blend](https://archive.blender.org/developer/F8712118/uv_edge_ring_select.blend) - Open attached .blend - Perform edge ring select on Mesh - Perform edge ring select on UV - Notice differences
Author
Member

Added subscriber: @deadpin

Added subscriber: @deadpin

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This can be supported with sync-select enabled.

This can be supported with sync-select enabled.

Added subscriber: @iss

Added subscriber: @iss

This comment was removed by @iss

*This comment was removed by @iss*

This issue was referenced by b5194520e3

This issue was referenced by b5194520e3bdc7f3cdb418b6cbd7bb31db9c8775

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-07-22 06:37:50 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79148
No description provided.