Fix T79148: UV Edge ring select doesn't select edges

While UV doesn't yet support edge selection, it can
when sync select is enabled.